[es] partners.lang l10n reviewed and edited.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107652 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-ES/marketplace/partners.lang
+++ b/es-ES/marketplace/partners.lang
@@ -1,7 +1,7 @@
 
 
 ;Build an early fan base and gain popularity.
-Crea una base de pioneros tecnológicos y gana popularidad.
+Crear una base de pioneros tecnológicos y ganar popularidad
 
 
 ;Opening Soon
@@ -45,11 +45,11 @@ Lanza tu aplicación en la Web
 
 
 ;Target tech savvy consumers with your app.
-Muestra tu aplicación para atraer a los consumidores expertos en tecnología.
+Mostrar tu aplicación y atraer a los consumidores expertos en tecnología
 
 
 ;Before the public launch later this year, Mozilla will be opening the Marketplace for user testing. Take advantage of this by being one of the first app developers to build a user base. Submit your app to:
-Antes de que el lanzamiento se haga público este año, Mozilla abrirá el Marketplace para que los usuarios lo prueben. Aprovéchate y sé uno de los primeros desarrolladores de aplicaciones en crear una base de usuarios. Envía tu aplicación a:
+Antes de que el lanzamiento se haga público este año, Mozilla abrirá el Marketplace para que los usuarios lo prueben. Aprovéchate y sé uno de los primeros desarrolladores de aplicaciones en crear una base de usuarios. Envía tu aplicación para
 
 
 ;Mozilla Marketplace — <em>Opening Soon</em>
@@ -61,4 +61,4 @@ El uso de estándares de la Web abierta y API diseñadas por Mozilla nos permite
 
 
 ;Test your app with a committed group of early adopters.
-Prueba tu aplicación con un grupo comprometido de pioneros tecnológicos.
+Probar tu aplicación con un grupo comprometido de pioneros tecnológicos
