--- a/es-ES/marketplace/partners.lang
+++ b/es-ES/marketplace/partners.lang
@@ -1,7 +1,7 @@
 
 
 ;Build an early fan base and gain popularity.
-Crear una base de pioneros tecnológicos y ganar popularidad
+Crear una base inicial de fans y ganar popularidad
 
 
 ;Opening Soon
