--- a/ku/main.lang
+++ b/ku/main.lang
@@ -403,7 +403,7 @@ Niha rojane bike
 
 
 ;Supported Devices
-Cîhazên piþtgiriyê
+CÃ®hazÃªn piÃ¾tgiriyÃª
 
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
@@ -414,5 +414,3 @@ Whatâ€™s New
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
 Privacy
-
-
