Scots Gaelic: 100% translated
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107665 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/gd/main.lang
+++ b/gd/main.lang
@@ -403,16 +403,14 @@ Tha thu a' cleachdadh seann-tionndadh de Firefox. Faigh <a href="%s">d' ùrachad
 
 
 ;Supported Devices
-Innealan ris a bheil taic
+Uidheaman ris a bheil taic
 
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Na tha ùr
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
-
-
+Prìobhaideachd
