Restore comments from en-GB source
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107666 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/gd/home.lang
+++ b/gd/home.lang
@@ -1,3 +1,4 @@
+# common strings for all pages
 ;Personalize
 Cuir dreach pearsanta air
 
@@ -26,6 +27,7 @@ Dìonaidh sinne do chùl.
 Faigh Firefox air an fhòn agad!
 
 
+# Social media page strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/socialmedia
 ;Made for sharing.
 Air a dhealbhadh son co-roinneadh.
 
@@ -42,6 +44,7 @@ Gnàthaich e <br/> ach am bi e <br/> nas luaithe fhathast
 Faigh tuilleadain <br/> agus dèan <br/> nas fhasa e
 
 
+# Worker strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/worker
 ;Works harder so <br /> you don't have to.
 Obraichidh e nas cruaidhe <br/> gus nach leig thusa leis.
 
@@ -58,6 +61,7 @@ Inntrigeadh furasta <br/> dha na tabaichean
 Tuilleadain airson <br/> cinneasachd
 
 
+# Gamer strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/gamer
 ;Made for <br/> the way you play.
 Air a dhealbhadh <br/> dhutsa.
 
@@ -70,6 +74,7 @@ Grafaigean <br/> 3D
 Fiù nas seasmhaiche <br/> na bha e roimhe
 
 
+# Messaging strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/messaging
 ;Effortless <br/> customization
 Gnàthachadh <br/> gun duilgheadas
 
@@ -78,6 +83,7 @@ Gnàthachadh <br/> gun duilgheadas
 Tèarainteachd <br/> adhartach
 
 
+# Streamer strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/streamer
 ;Advanced <br/> graphics
 Grafaigean <br/> adhartach
 
