--- a/gd/snippets.lang
+++ b/gd/snippets.lang
@@ -1,3 +1,4 @@
+# these text snippets are mostly used on about:home
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
 Thoir leat Firefox àite sam bith dhan dèid thu! Tha an tionndadh as ùire de Firefox airson Android deas ri do làimh a-nis. <a href="%s">Faigh e an-dràsta</a>.
 
