Fulah: 100% translated, some fixes
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107667 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ff/download.lang
+++ b/ff/download.lang
@@ -3,19 +3,19 @@ Mozilla Firefox ko wanngorde Alla meho nde goomu kuuɓngu ngu zaɓɓaani ngalu s
 
 
 ;Different by Design
-Seertungo e Diidngo
+Diidngo Seertungo
 
 
 ;Proudly <span>non-profit</span>
-Ko faaro amen wonde <span>ɓe ɗaɓɓaani ngalu</span>
+Ko faaro amen <span>waasde ɗaɓɓude ngalu</span>
 
 
 ;Innovating <span>for you</span>
-Addude kesamhesamaagu e <span>juuɗe maa</span>
+Kesamhesamaagul<span>haa e juuɗe maa</span>
 
 
 ;Fast, flexible, <span>secure</span>
-Na yaawi, na weeɓi, <span>na hisi</span>
+Na yaawi, na weeɓi, <span>na wondi e kisal</span>
 
 
 ;Thanks for choosing Firefox!
