--- a/ff/snippets.lang
+++ b/ff/snippets.lang
@@ -32,7 +32,7 @@ Firefox ena faarnoo wonde ɓe ɗaɓɓaani ngalu ngam addude kesamhesamaagu e inn
 
 
 ;Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
-Ena yaawi, ena hisi tee ena weeɓti, Firefox tan woni wanngorde ardinde ngoƴa maa. <a href="%s">Ɓeydu humpito</a> baɗte hol ko waɗi alaa mo min nanndi mbaydi.
+Ena yaawi, ena hisi tee ena weeɓti, Firefox tan woni wanngorde ardinde ngoƴa maa. <a href="%s">Ɓeydu humpito</a> baɗte hol ko waɗi alaa mo min nanndi diidngo.
 
 
 ;<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
