--- a/ff/upgradepromos.lang
+++ b/ff/upgradepromos.lang
@@ -1,5 +1,5 @@
 ;Mozilla Firefox Web Browser — Free Download
-Wanngorde Geese Mozilla Firefox — Awwto Alla meho
+Wanngorde Geese Mozilla Firefox — Aawto Alla meho
 
 
 ;How fast is <span>your Firefox?</span>
