--- a/ff/whatsnew.lang
+++ b/ff/whatsnew.lang
@@ -1,6 +1,6 @@
 # This is for the Whatsnew page: http://www-dev.allizom.org/b/firefox/whatsnew/
 ;Hooray! Your Firefox is up to date.
-Haayoo! Firefox maa hesɗitii.
+Haayoo! Firefox maa hesɗitii haŋkadi.
 
 
 ;Your Firefox is out of date.
@@ -60,7 +60,7 @@ Roboo Android oo tummbitaa ko e golle cosaaɗe ɗe <a href="%s">Google wostondir
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Heɓ Firefox mo Android</a> ngam tamde doole Geese e juuɗe maa. Ena yaawi, e,a yuɓɓi, ena hisi!
+<a href="%s">Heɓ Firefox mo Android</a> ngam tamde doole Geese e juuɗe maa. Ena yaawi, ena yuɓɓi, ena hisi!
 
 
 ;Now get the mobile browser that’s got your back
