--- a/mk/videos/video_fx13.lang
+++ b/mk/videos/video_fx13.lang
@@ -1,42 +1,44 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Што е ново во Firefox] Со најновиот Firefox можете уште полесно и побрзо да стигнете таму каде што сакате да сурфате.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Преку освежената домашна страница може лесно да пристапите до најчесто користените опции од менијата.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Како што се преземњата, обележувачите, историјата, додатоците, синхронизацијата и поставките.
+
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Страница за нови јазичиња] Исто така направивме подобрувања на страницата за нови јазичиња.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Со страницата за нови јазичиња лесно можете да дојдете до страниците што често и скоро сте ги посетиле.
+
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+За да почнете да ја користите страницата за нови јазичиња отворете ново јазиче со кликнање на „+“ на врвот на прелистувачот.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+Страницата за нови јазичиња ќе прикажува сликички од страниците што најчесто или најскоро сте ги посетиле.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Можете да ја прилагодите страницата за нови јазичиња со менување на распоредот на сликичките од страниците.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Кликнете на шпенаглата да го заклучите ова место или на копчето „X“ за да го отстраните.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Исто така можете да кликнете на иконата „решетка“ во горниот десен ќоѓ на страницата за да се вратите на празната страница за јазичиња.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Земете го најновиот Firefox и почнете веднаш да ги користите овие нови особености!
