--- a/mk/whatsnew.lang
+++ b/mk/whatsnew.lang
@@ -2,98 +2,105 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Ура! Вашиот Firefox е надграден.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Вашиот Вашиот треба да биде надграден.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Од безбедносни причини, препорачуваме да надградите до <a href="{url}">најновата и најдобрата верзија</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Користите непозната верзија на Firefox.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Од безбедносни причини, препорачуваме да ја преземете <a href="{url}">најновата и најдобрата верзија</a>.
+
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Завршете ја следната задача<br/>побрзо од било кога
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Видете како новите особености на Firefox Ви помагаат да сурфате побрзо и поефикасно.
+
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Дознајте повеќе за <a href="{url}">особеноста за нови јазичиња »</a>
+
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Дознајте повеќе за <a href="{url}">новата домашна страница »</a>
 
 
 ;Keep in touch
-Keep in touch
+Останете во контакт
+
 
 
 ;Keep it moving
-Keep it moving
+Движете се
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Земете Firefox » <b>за Android</b>
 
 
 ;Keep it going
-Keep it going
+Не застанувајте
 
 
 ;Join Mozilla
-Join Mozilla
+Придружете ѝ се на Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+Роботот Android е изведен од дело направено и <a href="%s">споделено од Google</a> и искористен е според условите опишани во <a href="%s">Лиценцата Creative Commons 3.0 Attribution</a>.
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Земете го Firefox Android</a> и земете ја моќта на мрежата во Ваши раце. Брз е, паметен и безбеден.
+
+
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Земете го мобилниот прелистувач што мисли на Вас.
 
 
 ;Firefox Features
-Firefox Features
+Особености на Firefox
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Добредојдовте во Firefox
 
 
 ;Firefox Help
-Firefox Help
+Помош за Firefox
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Дизајнерско решение за Firefox за Android
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Брз. Паметен. Безбеден.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+Земете го мобилниот прелистувач што мисли на Вас.
+
 
 
