--- a/fa/whatsnew.lang
+++ b/fa/whatsnew.lang
@@ -58,7 +58,7 @@
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-;ربات اندروید توسط کاری که <a href="%s">گوگل به اشتراک‌گذاشته</a> است بازسازی شده و براساس مقررات مشروح در گواهینامهٔ <a href="%s">Creative Commons 3.0 Attribution</a> مورد استفاده قرار گرفته است.
+ربات اندروید توسط کاری که <a href="%s">گوگل به اشتراک‌گذاشته</a> است بازسازی شده و براساس مقررات مشروح در گواهینامهٔ <a href="%s">Creative Commons 3.0 Attribution</a> مورد استفاده قرار گرفته است.
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
