l10n: update reference files for future locales
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107760 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ab-CD/newsletter.lang
+++ b/ab-CD/newsletter.lang
@@ -101,8 +101,8 @@ Let’s Be Friends!
 Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
 
 
-;Manage your <span>Newsletter Subscriptions
-Manage your <span>Newsletter Subscriptions
+;Manage your <span>Newsletter Subscriptions</span>
+Manage your <span>Newsletter Subscriptions</span>
 
 
 ;Subscribe
@@ -113,8 +113,8 @@ Subscribe
 Unsubscribe
 
 
-;Check here if you’d like to be removed from all Mozilla emails'
-Check here if you’d like to be removed from all Mozilla emails'
+;Check here if you’d like to be removed from all Mozilla emails
+Check here if you’d like to be removed from all Mozilla emails
 
 
 ;Remove me from all Mozilla emails
@@ -123,3 +123,56 @@ Remove me from all Mozilla emails
 
 ;Save Preferences
 Save Preferences
+
+;Thanks for updating your email preferences.
+Thanks for updating your email preferences.
+
+
+;You've been unsubscribed.
+You've been unsubscribed.
+
+;We’re sorry to see you go. Would you mind telling us why you’re leaving?
+We’re sorry to see you go. Would you mind telling us why you’re leaving?
+
+
+;You send too many emails.
+You send too many emails.
+
+
+;Your content wasn't relevant to me.
+Your content wasn't relevant to me.
+
+
+;Your email design was too hard to read.
+Your email design was too hard to read.
+
+
+;I didn't sign up for this.
+I didn't sign up for this.
+
+
+;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+
+
+;Submit
+Submit
+
+;Thanks for telling us why you’re leaving.
+Thanks for telling us why you’re leaving.
+
+
+;Mozilla Newsletters
+Mozilla Newsletters
+
+
+;Thanks! Please check your inbox to confirm your subscription.
+Thanks! Please check your inbox to confirm your subscription.
+
+
+;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+
+
+;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
