--- a/ab-CD/main.lang
+++ b/ab-CD/main.lang
@@ -402,3 +402,15 @@ Upgrade now
 Update now
 
 
+;Supported Devices
+Supported Devices
+
+
+# This is the equivalent of 'Release Notes' but shorter, used next to download buttons
+;What’s New
+What’s New
+
+
+# This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
+;Privacy
+Privacy
