--- a/ab-CD/upgradedialog.lang
+++ b/ab-CD/upgradedialog.lang
@@ -43,3 +43,49 @@ experience faster performance
 
 ;enjoy greater customization
 enjoy greater customization
+;Your version of Firefox will soon be vulnerable to online attacks.
+Your version of Firefox will soon be vulnerable to online attacks.
+
+
+;Stay safe online
+stay safe online
+
+
+;Enjoy new features
+enjoy new features
+
+
+;URGENT!
+URGENT!
+
+
+;Your version of Firefox is no longer protected against online attacks.
+Your version of Firefox is no longer protected against online attacks.
+
+
+;This is your last reminder before you will be automatically updated to the latest version
+This is your last reminder before you will be automatically updated to the latest version
+
+
+;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+
+
+;We recommend:
+We recommend:
+
+
+;Upgrading your <a %s>operating system</a>
+Upgrading your <a %s>operating system</a>
+
+
+;Downloading a compatible browser
+Downloading a compatible browser
+
+
+;Installing a free upgrade to your <a %s>operating system</a>
+Installing a free upgrade to your <a %s>operating system</a>
+
+
+;You will be prompted once more before being automatically updated.
+You will be prompted once more before being automatically updated.
