[IT] [QA] Changed preoccupare con prende cura as suggested in Bug. 776263
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107779 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/it/whatsnew.lang
+++ b/it/whatsnew.lang
@@ -66,7 +66,7 @@ Android Robot è stato riprodotto a partire da un lavoro creato e <a href="%s">c
 
 
 ;Now get the mobile browser that’s got your back
-Adesso scarica il browser mobile che si preoccupa solo di te
+Adesso scarica il browser mobile che si prende cura solo di te
 
 
 ;Firefox Features
@@ -94,6 +94,6 @@ Veloce. Intelligente. Sicuro.
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Installa il browser mobile che si preoccupa solo di te.
+Installa il browser mobile che si prende cura solo di te.
 
 
