--- a/zh-TW/mobile.lang
+++ b/zh-TW/mobile.lang
@@ -131,6 +131,6 @@ Firefox 有滿滿的創新設計，讓您輸入更少、瀏覽更多，更快更
 
 # Google Play is the new name of the Android Market
 ;Free from the Google Play Store
-免費自 Google Play 商店下載
+自 Google Play 商店免費下載
 
 
