--- a/zh-TW/snippets.lang
+++ b/zh-TW/snippets.lang
@@ -74,7 +74,7 @@ Firefox 以身為非營利組織，並站在您的立場，為了您創新為榮
 
 
 ;Firefox for Android is now optimized for the way you browse on tablets. <a href="%s">Get the power of the Web at your fingertips</a>.
-Andorid 上的 Firefox 已為您在平板瀏覽體驗最佳化。<a href="%s">立刻將網頁威力玩轉於您的指尖</a>。
+Android 上的 Firefox 已為您在平板瀏覽體驗最佳化。<a href="%s">立刻將網頁威力玩轉於您的指尖</a>。
 
 
 ;Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
