--- a/zh-CN/main.lang
+++ b/zh-CN/main.lang
@@ -123,7 +123,7 @@
 
 
 ;Get Firefox
-;获取 Firefox
+获取 Firefox
 
 
 ;Free Download
@@ -219,15 +219,15 @@ MB {ok}
 
 
 ;Except where otherwise <a href="%s">noted</a>, content on this site is licensed under the <br /><a href="%s">Creative Commons Attribution Share-Alike License v3.0</a> or any later version.
-;除非另有 <a href="%s">声明</a>，本网站内容受<br /><a href="%s">知识共享署名份额许可证第3版（Creative Commons Attribution Share-Alike License v3.0）</a>或更新版本的保护。
+除非另有 <a href="%s">声明</a>，本网站内容受<br /><a href="%s">知识共享署名份额许可证第3版（Creative Commons Attribution Share-Alike License v3.0）</a>或更新版本的保护。
 
 
 ;Report Trademark Abuse
-;报告滥用商标
+报告滥用商标
 
 
 ;Free Upgrade
-;免费更新
+免费更新
 
 
 ;Follow us on:
@@ -283,51 +283,51 @@ Firefox 已升级
 
 
 ;Take a Look at Tomorrow's Web
-
+看看将来的网络
 
 
 ;Journey to the Future with Firefox
-
+用 Firefox 去未来旅行
 
 
 ;Join the Beta Program
-
+加入 Beta 计划
 
 
 ;Experience Firefox
-
+体验 Firefox
 
 
 ;The future of the Web is waiting for you!
-
+网络的未来在等你！
 
 
 ;The future of the Web starts now.
-
+网络的未来现在启程了。
 
 
 ;Try Firefox with a fresh look and feel.
-
+尝试给 Firefox 换个新的外观和感受。
 
 
 ;Experience tomorrow's Web today.
-
+现在就体验明天的互联网。
 
 
 ;Check out the new look and feel of Firefox.
-
+看看 Firefox 的新外观新感受。
 
 
 ;Browse the future of the Web.
-
+浏览未来的网络
 
 
 ;See Firefox with a new look and feel.
-
+体验一下 Firefox 的新外观和感受。
 
 
 ;Download Beta Now.
-
+立即下载 Beta 版。
 
 
 ;All Systems & Languages
@@ -383,23 +383,23 @@ Mozilla Firefox. 为 XP 带来最新的网络体验。
 
 
 ;You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
-You're using an old version of Firefox. Get your update to stay safe! <br/> <a href="%s">Download the free upgrade</a> in less than a minute for the latest features, speed and security fixes.
+你正在使用一个旧版本的 Firefox 。升级以确保安全！ <br/> 花费不到一分钟的时间 <a href="%s">下载免费的升级版</a> 以获得最新的功能、速度和安全修复。
 
 
 ;You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
-You need an upgrade! Stay safe in less than a minute. <br/> Start using your new Firefox for the best in browsing and customization on the Web. <br/>   It’s fast and free!
+需要升级！不到一分钟的时间即可确保安全。 <br/> 开始使用你的新 Firefox 以获得最佳的网络浏览和定制体验。 <br/> 不仅快速而且免费！
 
 
 ;You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
-You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
+你正在使用旧版本的 Firefox 。 <a href="%s">获取更新</a> 以确保安全！ <br/> 体验最新的功能，安全修复和迄今为止最快的 Firefox。花费不到一分钟的时间下载免费升级。
 
 
 ;Upgrade now
-Upgrade now
+现在升级
 
 
 ;Update now
-Update now
+现在更新
 
 
 ;Supported Devices
@@ -408,11 +408,11 @@ Update now
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+更新说明
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+隐私
 
 
