l10n: fy-NL, translation updates
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107825 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fy-NL/main.lang
+++ b/fy-NL/main.lang
@@ -1,4 +1,4 @@
-;Navigation
+﻿;Navigation
 Navigaasje
 
 
@@ -207,7 +207,7 @@ MB {ok}
 
 
 ;MegaBytes
-MegaBytes {ok}
+Megabytes
 
 
 ;FAQ
@@ -408,11 +408,11 @@ Stipe apparaten
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Wat is nij
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+Privacy {ok}
 
 
