--- a/fy-NL/mobile.lang
+++ b/fy-NL/mobile.lang
@@ -1,4 +1,4 @@
-# The strings below are specific to the Mobile page located at http://www.mozilla.org/mobile/
+﻿# The strings below are specific to the Mobile page located at http://www.mozilla.org/mobile/
 
 
 ;Get Firefox for Android
@@ -10,11 +10,11 @@ Download foar <span>Android</span>
 
 
 ;Free from the Android Market
-Fergees fan de Android Market
+Fergees út de Android Market
 
 
 ;Or visit <a %s>Firefox.com/m</a> on your phone.
-Of besykje <a %s>Firefox.com/m</a> op jo mobyl.
+Of probearje <a %s>Firefox.com/m</a> op jo mobyl.
 
 
 ;Supported Devices
@@ -131,6 +131,6 @@ Besjoch al ús kanalen foar mobyl »
 
 # Google Play is the new name of the Android Market
 ;Free from the Google Play Store
-Free from the Google Play Store
+Fergees út de Google Play Store
 
 
