--- a/fy-NL/videos/video_fx13.lang
+++ b/fy-NL/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Wat is nij yn Firefox] It is no makliker en flugger om dêr te kommen dêr't jo wolle mei de lêste Firefox.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Mei de nije startside kinne jo no maklik tagong krije en navigearje nei jo meast algemien brûkte menu-opsjes.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Lykas downloads, blêdwizers, skiednis, add-ons, sync en ynstellingen.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Nije ljepblêdside] Wy hawwe ek ferbetteringen tafoege oan jo Nije ljepblêdside.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Mei de nij ljepblêdside, kinne jo no maklik navigearje nei jo meast resinte en faaks besochte siden yn ien klik.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Om te starten mei de nij ljeblêdside, iepenke in nij ljepblêd mei de '+' boppe-yn jo browser.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+De nije ljepblêdside sil no lytse foarbylden toane fan jo meast resinte en faak besochte websteeën út jo skiednis.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Jo kinne jo ljepblêdside oanpasse troch de foarbylden te sleepjen om de folchoarder te wizigjen.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Klik op de punêse om de side op in plak fêst te setten, of de 'X'knop om in side fuort te smiten.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Jo kinne ek it 'grid'-ioan oanklikke rjochtsboppe yn de side om werom te gean nei de blanko ljepblêdside.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Krij no de lêste Firefox en start hjoed om dizze nije funksjes te brûken!
