--- a/fy-NL/whatsnew.lang
+++ b/fy-NL/whatsnew.lang
@@ -1,4 +1,4 @@
-# This is for the Whatsnew page: http://www-dev.allizom.org/b/firefox/whatsnew/
+﻿# This is for the Whatsnew page: http://www-dev.allizom.org/b/firefox/whatsnew/
 
 
 ;Hooray! Your Firefox is up to date.
@@ -10,72 +10,72 @@ Jo Firefox is út 'e tiid.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Om feilichheidsredenen rikkemandearje wy jo oan om te fernijen nei de <a href="{url}">lêste en bêste ferzje</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Jo brûke in ûnbekende ferzje fan Firefox.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Om feilichheidsredenen rikkemandearje wy jo oan de <a href="{url}">lêste en bêste ferzje</a> yn te laden.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Gean nei jo folgjende taak<br/>flugger as ea
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Sjoch hoe de nije funksjes yn Firefox jo helpe flugger en effisjenter te blêdzjen.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Lês mear oer <a href="{url}">de nije ljepblêdfunksje »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Lês mear oer ús <a href="{url}">nije startside »</a>
 
 
 ;Keep in touch
-Keep in touch
+Bliuw yn ferbining
 
 
 ;Keep it moving
-Keep it moving
+Hâld it yn beweging
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Krij Firefox » <b>foar Android</b>
 
 
 ;Keep it going
-Keep it going
+Hâld it oan 'e gong
 
 
 ;Join Mozilla
-Join Mozilla
+Doch mei mei Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+De Android Robot is reprodusearre út wurk makke en <a href="%s">dield troch Google</a> en brûkt neffens de betingsten beskreaun yn de <a href="%s">Creative Commons 3.0 Attribution License</a>.
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Krij Firefox foar Android</a> en bring de krêft fan it ynternet yn jo hannen. It is fluch, tûk en feilich!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Krij no de mobile browser dy't jo beskermt
 
 
 ;Firefox Features
-Firefox Features
+Firefox funksjes
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Wolkom by Firefox
 
 
 ;Firefox Help
@@ -84,16 +84,16 @@ Firefox Help
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Firefox foar Android keunstwurk
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Fluch. Tûk. Feilich.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+Krij de mobile browser dy't jo beskermt.
 
 
