--- a/fy-NL/snippets.lang
+++ b/fy-NL/snippets.lang
@@ -1,4 +1,4 @@
-# these text snippets are mostly used on about:home
+﻿# these text snippets are mostly used on about:home
 
 
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
@@ -82,66 +82,66 @@ Download Firefox op jo Android tablet en krij de krêft fan it yntenet yn jo han
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">Download Firefox Beta</a>, jou kommentaar en help de folgjende Firefox noch better te meitsjen foar ús 450 miljoen brûkers.
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+Test funksjes, ferbetterje en poets se en help ús de flgjende ferzje och better te meitsjen. <a href="%">Download Firefox Beta hjoed!</a>
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+Nocht oan Firefox? Wolle jo helpe de folgjende ferzje noch better te meitsjen? <a href="%">Download Firefox Beta</a> en jou ús daliks kommentaar!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+Brûke jo de lêste Firefox Beta? <a href="%">Krij it no</a> en help ús om de lêste funksjes te testen.
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
+Net de lêste Firefox Beta? <a href="%">Krij it hjoed</a> om daliks te sjen wêr't wy no oan wurkje foar de folgjende ferzje.
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+Wolle jo kommentaar diele? <a href="%">Fyn út hoe</a> en help de folgjende ferzje fan Firefox noch better te meitsjen.
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+Firefox Beta brûkers: ferjit net om <a href="%">kommentaar te jaan</a> om ús te helpen mei de lêste oanpassingen foar de folgjende ferzje.
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+Help om de folgjende ferzje fa Firefox noch etter te meitsjen. <a href="%">Wurdt in Affiliate</a> en diel Firefox Beta mei dyn freonen.
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
+Noegje freonen út foar in preview fan nije Firefox funksjes. <a href="%">Wurdt in Affiliate</a> en diel Firefox Aurora hjoed.
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Brûke jo Firefox op ferskate kompjûters? No kinne jo jo add-ons syngronisearje oer alle kompjûters. <a href="%">Fyn út hoe Sync te aktivearjen.</a>
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
+Fluch, fluch, fluch. <a %s>Firefox foar Android hat krekt in grutte fernijing krigen</a>. Help ús it bekend te meitsjen.
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox hat nije funksjes om noch flugger nei jo folgjende taak te gean! <a href="%">Sjoch de fideo om mear te learen.</a>
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Nocht oan Firefox Beta? <a href="%s">Noegje jo freonen út</a> om no al te sjen wat der ynkoarten yn Firefox komt.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Ik brûk Firefox Beta om no al de lêste funksjes en innovaasjes te sjen fan de folgjende Firefox. <a href="%s">Sjoch ek ris</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Tank foar it gebrûk fan Firefox Beta om Firefox noch better te meitsjen. Noegje no <a href="%s">dyn freonen</a> om it te probearjen.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+Ik brûk Firefox Beta om de lêste funksjes te testen en Firefox noch better te mitsjen. <a href="%s">Probearje it ek ris</a>.
 
 
