Fulah: some minor corrections
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107835 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ff/whatsnew.lang
+++ b/ff/whatsnew.lang
@@ -64,7 +64,7 @@ Roboo Android oo tummbitaa ko e golle cosaaɗe ɗe <a href="%s">Google wostondir
 
 
 ;Now get the mobile browser that’s got your back
-Jooni heɓ wanngorde cinndel wona nafoore maa
+Jooni heɓ wanngorde cinndel ko nafoore mehre-mehre
 
 
 ;Firefox Features
@@ -92,4 +92,4 @@ Jaawɗum. Juɓɓuɗum. Kisɗum.
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Heɓ wanngorde cinndel wona nafoore maa.
+Heɓ wanngorde cinndel ko nafoore mehre-mehre.
