Acholi: update strings
Some reflows due to comment handling now being supported in the tools


git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107836 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ach/home.lang
+++ b/ach/home.lang
@@ -1,3 +1,4 @@
+# common strings for all pages
 ;Personalize
 Ket ma piri keni
 
@@ -26,6 +27,7 @@ Wan wanongo yongei.
 Nong Firefox ki kome cim megi!`
 
 
+# Social media page strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/socialmedia
 ;Made for sharing.
 Kiyubo ne pi anywaka.
 
@@ -42,6 +44,7 @@ Ket megi <br/> me miyo <br/>ne bedo madwir
 Nong med ikom <br/>ci mii <br/>ne obed mayot
 
 
+# Worker strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/worker
 ;Works harder so <br /> you don't have to.
 Tii tic matek wek <br /> pe myero i.
 
@@ -58,6 +61,7 @@ Donyo i dirica <br/> yot atika
 Kelo ne woko <br/> med ikome
 
 
+# Gamer strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/gamer
 ;Made for <br/> the way you play.
 Kiyubo ne pi <br/> iyore ma in ituku kwede.
 
@@ -70,6 +74,7 @@ Kiyubo ne pi <br/> iyore ma in ituku kwede.
 Tiyo labongo dic <br/> mapol
 
 
+# Messaging strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/messaging
 ;Effortless <br/> customization
 Ket megi <br/> ma ice pe
 
@@ -78,6 +83,7 @@ Ket megi <br/> ma ice pe
 Ber bedo <br/> ma lamal
 
 
+# Streamer strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/streamer
 ;Advanced <br/> graphics
 Cal me <br/> rwom ma lamal
 
