--- a/ach/mobile.lang
+++ b/ach/mobile.lang
@@ -1,3 +1,4 @@
+# The strings below are specific to the Mobile page located at http://www.mozilla.org/mobile/
 ;Get Firefox for Android
 Nong Firefox pi Anroid
 
@@ -124,3 +125,8 @@ Kwany ci tem gedo ma tye atir piri.
 
 ;See all our channels for mobile »
 Nen kabeo wa weng pi wot awota »
+
+
+# Google Play is the new name of the Android Market
+;Free from the Google Play Store
+Tye alala ki citowa me Tuku Google
