--- a/ach/foundationsection.lang
+++ b/ach/foundationsection.lang
@@ -1,3 +1,4 @@
+# Strings used for the Mozilla Foundation Annual report section resources (header, videos, images, pdf)
 ;The State of Mozilla <span>Annual Report</span>
 Kit ma Mozilla tye kwede<span>Ngec me mwaka</span>
 
