--- a/ach/main.lang
+++ b/ach/main.lang
@@ -159,7 +159,7 @@ Myero i <a href="http://get.adobe.com/flashplayer/"> Ngec pa Latuku me Adober</a
 
 
 ;Firefox is up to date, but your current version of Flash Player can cause security and stability issues.  Please <a href="http://get.adobe.com/flashplayer/">install the free update</a> as soon as possible.
-Firefox tye naka wa kombedi, ento cik me Latuku me Flash matye romo kelo ber bedo ki kit tic maber.Tim ber <a href="http://get.adobe.com/flashplayer/">i ket ngec me nono</a>oyotoyot.
+Firefox tye naka wa kombedi, ento cik me Latuku me Flash matye romo kelo ber bedo ki kit tic maber.Tim ber <a href="http://get.adobe.com/flashplayer/">i ket ngec me nono</a>oyotoyot.  
 
 
 ;Features
@@ -403,16 +403,14 @@ Yil rwom ne kombedi
 
 
 ;Supported Devices
-Jami tic ma kicwako te
+Jami tic ma Kicwako te
 
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Ngo Manyen
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
-
-
+I mung pa dano
