--- a/ach/snippets.lang
+++ b/ach/snippets.lang
@@ -1,3 +1,4 @@
+# these text snippets are mostly used on about:home
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
 Ter Firefox kan mo keken ma in ibi ceto ie! Firefox ma okati macok coki manyen pi Anroid tye makome ci tye atera piri me nongo yom cwiny ie. <a href="%s">Nong ne kombedi</a>.
 
