--- a/ach/whatsnew.lang
+++ b/ach/whatsnew.lang
@@ -1,6 +1,4 @@
 # This is for the Whatsnew page: http://www-dev.allizom.org/b/firefox/whatsnew/
-
-
 ;Hooray! Your Firefox is up to date.
 Hooray! Firefox mamegi tye katic ni oo wa tin.
 
@@ -62,38 +60,36 @@ Kikelo dok Robot me Android ki tic ma kiyubu ci <a href="%s">Google onywako ne</
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Nong Firefox pi Android</a> ci ket teko pa web i cingi, Tye madwir, ber ki ogwoke maber!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Kombedi nong layeny me cing ma onongo yongeyi
 
 
 ;Firefox Features
-Firefox Features
+Kit Firefox
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Wajoli i Firefox
 
 
 ;Firefox Help
-Firefox Help
+Kony me Firefox
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Tic cing me Firefox pi Android
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Fast. Smart. Safe. {ok}
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
-
-
+Nong layeny me cing ma onongo yongeyi.
