Hindi: Update translations
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107837 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/hi-IN/videos/video_fx13.lang
+++ b/hi-IN/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[फ़ायरफ़ॉक्स में नया क्या है]यह अब और भी आसान और तेज हैं, ताजातरीन फ़ायरफ़ॉक्स के साथ जो आप चाहते हैं वो पा सकते हैं.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+पुनः डिज़ाइन किये गए मुखपृष्ठ की मदद से अब आप आपके द्वारा सबसे अधिक इस्तेमाल किये गए मेनू विकल्प तक आसानी से पहुँच और नेविगेट कर सकते हैं.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+जैसे डाउनलोड, पसंदीदा, इतिहास, Add-ons, तुल्यकालित और सेटिंग.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[नया टैब पृष्ठ] हमने आपके नए टैब पृष्ठ में भी सुधार जोड़ दिए हैं.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+नए टैब पृष्ठ की मदद से, अब आप आसानी से मात्र एक क्लिक में ही आपके द्वारा हाल ही में और अक्सर भ्रमण की गयी साइटों को नेविगेट कर सकते हैं.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+नया टैब पृष्ठ का उपयोग शुरू करने के लिए, अपने ब्राउज़र के शीर्ष में '+' पर क्लिक करके एक नया टैब बनाएँ.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+आपके कमाल के इतिहास पट्टी से नया टैब पृष्ठ आपके द्वारा हाल ही में और अक्सर भ्रमण की गयी  वेबसाइटों की लघुछवि  प्रदर्शित करेगा.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+क्रम को बदलने के लिए चारों ओर लघुछवि को खींचकर आप अपने नए टैब पृष्ठ को मनोनुकूलित कर सकते हैं.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+साइट को एक स्थान पर लॉक करने के लिए पुश पिन, या एक साइट को हटाने के लिए 'X' बटन पर क्लिक करें.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+नए रिक्त टैब पृष्ठ पर वापस जाने के लिए आप पृष्ठ के ऊपरी दाएँ भाग में 'ग्रिड' चिह्न पर भी क्लिक कर सकते हैं.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+आज ही नवीनतम फ़ायरफ़ॉक्स पायें और इसकी नई सुविधाओं का लुफ्त उठायें!
