--- a/el/main.lang
+++ b/el/main.lang
@@ -408,11 +408,11 @@ Mozilla Firefox. Φέρνει τον σύγχρονο ιστό στα XP.
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Νέα
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+Απόρρητο
 
 
