--- a/el/whatsnew.lang
+++ b/el/whatsnew.lang
@@ -62,38 +62,38 @@
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Κάντε λήψη του Firefox για Android</a> και δείτε τη δύναμη του ιστού στα χέρια σας. Είναι γρήγορος, ασφαλής και έξυπνος!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Βάλτε τώρα τον περιηγητή για κινητά που σας υποστηρίζει
 
 
 ;Firefox Features
-Firefox Features
+Χαρακτηριστικά Firefox
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Καλωσορίσατε στον Firefox
 
 
 ;Firefox Help
-Firefox Help
+Βοήθεια Firefox
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Εικόνα του Firefox για Android
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Γρήγορος, ασφαλής, έξυπνος.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+Βάλτε τον περιηγητή για κινητά που σας υποστηρίζει.
 
 
