--- a/hu/main.lang
+++ b/hu/main.lang
@@ -247,7 +247,7 @@ Tudjon meg többet
 
 
 ;Watch the video
-Video megtekintése
+Videó megtekintése
 
 
 ;WebM format
@@ -263,7 +263,7 @@ MPEG-4 formátum
 
 
 ;Whoops! Be sure to enter a valid email address.
-Győződjön meg róla, hogy valás e-mail címet adott meg.
+Győződjön meg róla, hogy valós e-mail címet adott meg.
 
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
