--- a/hu/upgradedialog.lang
+++ b/hu/upgradedialog.lang
@@ -81,7 +81,7 @@ Töltsön le egy kompatibilis böngészőt
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Telepítse fel az <a %s>operációs rendszer</a> ingynes frissítését
+Telepítse fel az <a %s>operációs rendszer</a> ingyenes frissítését
 
 
 ;You will be prompted once more before being automatically updated.
