Update SL lang files
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107890 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/sl/mobile.lang
+++ b/sl/mobile.lang
@@ -131,6 +131,6 @@ Oglejte si vse kanale za mobilnike »
 
 # Google Play is the new name of the Android Market
 ;Free from the Google Play Store
-Free from the Google Play Store
+Brezplačno z Google Play Stora
 
 
