--- a/sl/snippets.lang
+++ b/sl/snippets.lang
@@ -126,23 +126,23 @@ Hitrost! <a %s>Firefox za Android je pravkar dobil veliko posodobitev</a>. Pomag
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox prinaša novosti, ki vas še hitreje vodijo do vsakdanjih opravil! <a href="%">Za podrobnosti si oglejte video.</a>
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Vam je všeč Firefox Beta? <a href="%s">Povabite prijatelje</a> k ogledu prihajajočih novosti za Firefox.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Uporabljam Firefox Beta, da lahko spoznavam novosti in inovacije, ki bodo kmalu na voljo v Firefoxu. <a href="%s">Poskusi ga še ti</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Hvala, ker uporabljate Firefox Beta in pomagate narediti Firefox še boljši. <a href="%s">Povabite še prijatelje</a>.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+Uporabljam Firefox Beta, da preizkušam najnovejše zmogljivosti in delam Firefox še boljši. <a href="%s">Poskusi ga še ti</a>.
 
 
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
