--- a/sl/whatsnew.lang
+++ b/sl/whatsnew.lang
@@ -62,38 +62,38 @@ Android Robot je reprodukcija dela, ki ga je ustvaril in <a href="%s">dal na raz
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Prenesite Firefox za Android</a> in vzemite moč spleta nazaj v svoje roke. Hitro, pametno in varno!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Prenesite mobilni brskalnik, ki vas podpira
 
 
 ;Firefox Features
-Firefox Features
+Značilnosti Firefoxa
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Pozdravljeni v Firefoxu
 
 
 ;Firefox Help
-Firefox Help
+Pomoč za Firefox
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Grafika Firefoxa za Android
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Hiter. Pameten. Varen.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+Prenesite mobilni brskalnik, ki vas podpira.
 
 
