[sk] update main.lang, mobile.lang, whatsnew.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107902 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/sk/mobile.lang
+++ b/sk/mobile.lang
@@ -131,6 +131,6 @@ Zobraziť všetky kanály pre mobilný Firefox »
 
 # Google Play is the new name of the Android Market
 ;Free from the Google Play Store
-Free from the Google Play Store
+Zadarmo v obchode Google Play
 
 
