--- a/sk/whatsnew.lang
+++ b/sk/whatsnew.lang
@@ -62,38 +62,38 @@ Logo Android Robot bolo reprodukované z materiálu vytvoreného a <a href="%s">
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">Získajte Firefox pre Android</a> a budete mať silu webu vo svojich rukách. Je rýchly, inteligentný a bezpečný!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+Získajte mobilný prehliadač, ktorý vás dostane
 
 
 ;Firefox Features
-Firefox Features
+Funkcie Firefoxu
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+Víta vás Firefox
 
 
 ;Firefox Help
-Firefox Help
+Pomocník Firefoxu
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+Logo Firefox pre Android
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+Rýchly. Inteligentný. Bezpečný.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+Získajte mobilný prehliadač, ktorý vás dostane.
 
 
