--- a/kk/main.lang
+++ b/kk/main.lang
@@ -408,11 +408,11 @@ Mozilla Firefox. XP үшін қазіргі замаңғы интернетке 
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Не жаңалық
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+Жекешілік
 
 
