--- a/kk/newsletter.lang
+++ b/kk/newsletter.lang
@@ -49,147 +49,145 @@ Mozilla жекелік саясатын оқыңыз да, өз келісімі
 Жақын арада біз Firefox-пен жұмыс жөнінде кеңестер мен қулықтарды, сонымен қатар Mozilla мен вебті жақсырақ қылу жолындағы жұмысымыз туралы жаңалықтарды жариялайтын боламыз.
 
 
-;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
 Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
+Ай сайынғы жаңартуларға жазылып, сізге Firefox-ты барынша қолдануға рұқсат беретін Mozilla-ның соңғы жаңалықтары, кеңестері сонымен қатар қулықтары жайлы хабардар болыңыз. Ол сізбен байланыста қалу үшін табысты жол. 
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
+Біз сіздің электронды поштаға дәлелдеу хабарды жібердік. Хабардағы сілтемеге басып, бұл таратылым тізіміне сіздің жазылғаныңызды дәлелдеңіз.
 
 
 ;Read all about it in our <span>newsletter</span>
-Read all about it in our <span>newsletter</span>
+Бұл туралы барлығын біздің <span>жаңалықтар хабарламада</span> оқып алыңыз
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Сіздің жаңалықтар таратылымына жазылғаныңыз дәлелделген.
 
 
 ;Format
-Format
+Пішім
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Сізде барлығы бапталған! <span>Бірақ, тоқтаңыз, бізде тағы да бар</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Тек керекті ақпаратты алуға қалайсыз ба? Бізге өзіңіз туралы азғана айтыңыз. Әзірше, мұнда болғанда, Mozilla-ның басқа жаңалықтарға жазылыңыз.
 
 
 ;Firefox & You
-Firefox & You
+Firefox және сіз
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Біздің басқа жаңалықтар таратылымы:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Сіздің сүйекті браузерді барынша қолдауға рұқсат беретін соңғы кеңестерді мен құлықтарды алыңыз.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Мобильді Firefox 
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Мобильді Firefox үшін арналған соңғы кеңейтулер мен мүмкіндіктер туралы біліңіз.
 
 
 ;Beta News
-Beta News
+Beta жаңалықтары
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Компьютер ушін және мобильді Firefox-тың жаңа мүмкіндіктері, соңғы нұсқаға қосылғанша дейін, олар туралы оқып біліңіз.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Дос болайық!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox сіздің сүйекті әлеуметтік жүйелерінде де бар. Бізбен байланыста болып, пікірсайыстарға қосылыңыз.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Сіздің <span>жаңалықтар таратылымына жазылуды</span> басқару
 
 
 ;Subscribe
-Subscribe
+Жазылу
 
 
 ;Unsubscribe
-Unsubscribe
+Жазылудан бас тарту
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Mozilla-ның барлық хабарлардан жазылуды болдырмау үшін, мұнда белгілеңіз
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+Mozilla-ның барлық хабарлардан жазылуды болдырмау 
 
 
 ;Save Preferences
-Save Preferences
+Баптауларды сақтау
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Сіздің пошта баптауларын жаңартылғаныңызға рахмет.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Сіз жазылудан айырылдыңыз.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Бізге кетуіңіз аянашты. Сіз жазылғаныңыздан неге айырылатынын айтуға қарсы болмайсыз ба?
 
 
 ;You send too many emails.
-You send too many emails.
+Сіз өте көп хабарларды жібердіңіз.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Хабарлардың құрамы маған қызықты болған жоқ.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Сіздің хабарлардың дизайыны оқуға аса қиын болған.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Мен бұған жазылған жоқпын.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Мен Mozilla-мен Facebook-та және Twitter-де байланысты сақтаймын.
 
 
 ;Submit
-Submit
+Жіберу
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Жазылудан бас тарту туралы айтқаныңызға рахмет.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Mozilla жаңалықтар таратылымы
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Рахмет! Енді кіріс хабар мұқабатын тексеріп, өз жазылғандығыңызды дәлелдеңіз.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Сіздің жазылғаныңызды дәлелдеу үшін, сізге mozilla@e.mozilla.org хабарды жібереді. Егер сіз оны көрмесеңіз, спам-фильтрды тексеріңіз. Біздің жаңалықтардың таратылымын алу үшін, сіз оған жазылғандығыңызды дәлелдеуңіз керек.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-
-
+Mozilla–дан келетін хабарлама сіздің хабар мұқабатына үнемі түсу үшін mozilla@e.mozilla.org жіберушыны адрестік кітабына қосуға ұмытпаңыз.
