Fixed line in newsletter.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107910 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/kk/newsletter.lang
+++ b/kk/newsletter.lang
@@ -49,7 +49,7 @@ Mozilla жекелік саясатын оқыңыз да, өз келісімі
 Жақын арада біз Firefox-пен жұмыс жөнінде кеңестер мен қулықтарды, сонымен қатар Mozilla мен вебті жақсырақ қылу жолындағы жұмысымыз туралы жаңалықтарды жариялайтын боламыз.
 
 
-Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
+;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
 Ай сайынғы жаңартуларға жазылып, сізге Firefox-ты барынша қолдануға рұқсат беретін Mozilla-ның соңғы жаңалықтары, кеңестері сонымен қатар қулықтары жайлы хабардар болыңыз. Ол сізбен байланыста қалу үшін табысты жол. 
 
 
