l10n: mr, translation updates by Sandeep Shedmake
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@107911 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/mr/whatsnew.lang
+++ b/mr/whatsnew.lang
@@ -62,38 +62,38 @@
 
 
 ;<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
-<a href="%s">Get Firefox for Android</a> and put the power of the Web in your hands. It’s fast, smart and safe!
+<a href="%s">अँड्राइडकरीता फायरफॉक्स प्राप्त करा</a> व तुमच्या हातात वेबची शक्ति घ्या. हे वेगवान, जलद, व सुरक्षित आहे!
 
 
 ;Now get the mobile browser that’s got your back
-Now get the mobile browser that’s got your back
+आत्ता तुमच्या पाठीशी राहणारे मोबाइल ब्राउजर प्राप्त करा
 
 
 ;Firefox Features
-Firefox Features
+फायरफॉक्स गुणविशेष
 
 
 # This is the tab title
 ;Welcome to Firefox
-Welcome to Firefox
+फायरफॉक्सवर आपले स्वागत
 
 
 ;Firefox Help
-Firefox Help
+फायरफॉक्स मदत
 
 
 # This is the alternate text for the Android image for blind people
 ;Firefox for Android artwork
-Firefox for Android artwork
+अँड्राइड आर्टवर्ककरीता फायरफॉक्स
 
 
 # Firefox for Android slogan, part of the fallback if we don't have a promotional video ready
 ;Fast. Smart. Safe.
-Fast. Smart. Safe.
+वेगवान. जलद. सुरक्षित.
 
 
 # This message is displayed as a fallback if we don't have a promotional video ready
 ;Get the mobile browser that’s got your back.
-Get the mobile browser that’s got your back.
+तुमच्या पाठीशी राहणारे मोबाइल ब्राउजर प्राप्त करा.
 
 
