--- a/sr/main.lang
+++ b/sr/main.lang
@@ -408,11 +408,11 @@
 
 # This is the equivalent of 'Release Notes' but shorter, used next to download buttons
 ;What’s New
-What’s New
+Шта је ново
 
 
 # This is the equivalent of 'Privacy Policy' but shorter, used next to download buttons
 ;Privacy
-Privacy
+Приватност
 
 
