--- a/sr/newsletter.lang
+++ b/sr/newsletter.lang
@@ -178,18 +178,18 @@ Format
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Мозила билтен
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Хвала! Молимо проверите поштанско сандуче електронске поште да бисте потврдили претплату.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Примићете електронску поруку од mozilla@e.mozilla.org да бисте потврдили претплату. Ако је не видите, проверите филтере за нежељену пошту. Морате потврдити претплату како бисте примали билтен.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Постарајте се да додате адресу ел. поште са које шаљемо поруке: mozilla@e.mozilla.org у свој адресар за електронску пошту како бисте били сигурни да ћете добијате поруке које Вам шаљемо.
 
 
